# discophon

./: .gitignore  .gitlab-ci.yml  .justfile  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  add_speaker_gender.py  add_speakers.py  archeo_french.py  check-jpn.py  check_final.py  check_manel.py  check_wolof.py  consolidate_dataset.py  example.py  fix-item.py  fix_japanese.py  inspect_splits.py  make_manifest.py  move_manel.py  ok_eus.py  phonolgy.json  pyproject.toml  remove_wolof.py  temp.py  true_durations.py  wolof.py  wolof_annotations.py  wolof_manifest.py  wolof_merge_to_long.py  zensical.toml
.github/workflows/: release.yml  togitlab.yml
archeo/: merge_french_v2.py  revive_french.py
archeo/german/: revive_german.py  segements_train.txt
baselines/: finetune_spidr.py  pyproject.toml
baselines/src/discophon/baselines/: __init__.py
builder/: README.md  main.py  pyproject.toml
builder/src/discophon/builder/: decoder.py  io.py  prepare_multilingual.py  verify.py
builder/src/discophon/builder/rules/: __init__.py  rules.json
core/: README.md  pyproject.toml
core/src/discophon/core/: __init__.py  builder.py  data.py  languages.py  utils.py
docs/: evaluate.md  index.md  prepare.md  textgrid.html
docs/api/: index.md
docs/assets/: baseline_across_layers_by_lang.html  baseline_across_layers_by_split.html  baseline_best_layer_by_ft_by_lang.html  baseline_best_layer_by_ft_by_split.html  dataset_stats.html  duration_distribution.html  phone_distribution.html  scores_best_layer_by_lang.csv  scores_best_layer_by_split.csv  scores_by_lang.csv  scores_by_split.csv  speaker_stats.html  top_speakers_distribution.html
docs/benchmark/: datasets.md  index.md  phonemes.md  tasks.md
docs/docs/: api.md  baselines.md  evaluate.md  index.md  prepare.md
docs/guide/: baselines.md  evaluate.md  index.md  prepare.md  submission.md
docs/javascripts/: leaderboard.js  textgrid.js
docs/leaderboard/: additional.md  index.md  results.md
docs/overrides/partials/: content.html
docs/stylesheets/: extra.css  leaderboard.css  vega.css
docs/templates/: leaderboard.snippet.html.j2  leaderboard.submission.md.j2
evaluate/: README.md  pyproject.toml
evaluate/src/discophon/evaluate/: __init__.py  __main__.py  abx.py  boundaries.py  evaluate.py  per.py  pnmi.py
paper/: fig_details.py  fig_phonemes.py  fig_streams.py  interactive_plots.py  justfile  paper.mplstyle  plot_benchmark.py  print_tables.py  pyproject.toml  table_many_to_one.py  table_one_to_one.py  tables.py
paper/tables/: benchmark-many-to-one.tex
prepare/: README.md  data.py  decoder.py  io (1).py  languages.txt  main.py  prepare_multilingual (2).py  pyproject.toml
prepare/src/discophon/prepare/: __main__.py  core.py
prepare/src/prepare/: prepare_multilingual.py
scripts/: benchmark.slurm  finetune_hubert.py  finetune_hubert.slurm  finetune_spidr.slurm  plot_phones_and_units.py  plot_streams.py  predictions_to_textgrids.py  write_alltextgrids.py
scripts/replication/: README.md  post_process_dataset.py  pyproject.toml  segment_dataset.py  segment_dataset.slurm  segment_mmsulab.py  segment_mmsulab.slurm  vad_dataset.py  vad_dataset.slurm
src/bootphon/: textgrid.py
src/discophon/: __init__.py  abx.py  benchmark.py  data.py  languages.py  leaderboard.py  paper.py  prepare.py  validate.py
src/discophon/assets/: phonology.json  sonority.json
src/discophon/baselines/: __init__.py  __main__.py  finetune_hubert.py  finetune_hubert_nokmeans.py  finetune_spidr.py  hubert.py  spidr.py  utils.py  validate_hubert.py  validate_spidr.py
src/discophon/core/: __init__.py  languages.py  validation.py
src/discophon/core/assets/: phonology.json  tipa.json
src/discophon/evaluate/: __init__.py  __main__.py  abx.py  assignment.py  boundaries.py  discovery.py  evaluate.py  per.py  pnmi.py  quality.py  recognition.py  segmentation.py  validate.py
src/discophon/prepare/: core.py
submission/: README.md  pyproject.toml
submission/src/discophon/submission/: __init__.py  __main__.py  pipeline.py  schema.py
tests/: conftest.py  strategies.py  test_assignment.py  test_batching.py  test_benchmark.py  test_cli.py  test_data.py  test_discovery.py  test_integrity.py  test_languages.py  test_quality.py  test_recognition.py  test_segmentation.py  test_tipa_mapping.py  test_validate.py
