[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bootphon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.34.0",
    "praat-textgrids>=1.4.0",
]

[tool.uv.workspace]
members = ["packages/*"]
