[project]
name = "discophon.evaluate"
version = "0.1.0"
description = "Evaluation package for the Phoneme Discovery challenge"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "CoML", email = "dev@cognitive-ml.fr" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "discophon-core",
  "joblib>=1.5.2",
  "numba>=0.62.1",
  "numpy>=2.3.4",
  "polars>=1.35.1",
  "xarray>=2025.10.1",
]

[project.urls]
homepage = "https://benchmarks.cognitive-ml.fr/phoneme_discovery"
source = "https://github.com/bootphon/phoneme_discovery"

[project.optional-dependencies]
abx = [
  "fastabx>=0.6.0",
]

[build-system]
requires = ["flit_core>=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.uv.sources]
discophon-core = { workspace = true }
